--- a/app/src/main/res/layout/view_remind.xml
+++ b/app/src/main/res/layout/view_remind.xml
@@ -8,7 +8,7 @@
     <android.support.v7.widget.CardView
         android:id="@+id/card_view_lost_w"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:layout_gravity="center"
         android:layout_margin="@dimen/card_margin"
         android:elevation="3dp"
@@ -17,72 +17,80 @@
     <RelativeLayout
 
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
         android:background="@color/background_color_white">
 
 
         <TextView
             android:layout_marginTop="5dp"
-            android:layout_marginLeft="9dp"
+            android:layout_marginLeft="24dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/size_text_main_in_list_view"
+            android:textSize="12sp"
             android:text="@string/data_in_list"
             android:id="@+id/text_data_r"
-            android:textColor="@color/colorPrimaryDark"
-            android:textStyle="bold" />
+            android:textColor="@color/colorPrimaryDark" />
 
         <ImageView
-            android:layout_marginTop="17.5dp"
-            android:layout_marginLeft="3dp"
-            android:layout_width="@dimen/box_ic_size"
-            android:layout_height="@dimen/box_ic_size"
+            android:layout_marginLeft="10dp"
+            android:layout_width="35dp"
+            android:layout_height="45dp"
+
             android:id="@+id/image_wine_r"
             android:src="@mipmap/ic_wine_bottle"
 
             android:contentDescription="@string/wine_in_r"
 
+            android:layout_below="@+id/text_data_r"
+            android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
         <TextView
-            android:layout_marginTop="19.5dp"
-            android:layout_marginLeft="22.5dp"
-
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/colorPrimaryDark"
 
-            android:textSize="@dimen/header_size"
+            style="@android:style/TextAppearance.Medium"
+
             android:text="@string/amount_wine_r"
             android:id="@+id/text_amount_wine_r"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:layout_alignTop="@+id/text_main_in_r"
+            android:layout_toRightOf="@+id/image_wine_r"
+            android:layout_toEndOf="@+id/image_wine_r" />
 
         <TextView
-            android:layout_marginLeft="34dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginLeft="22dp"
             android:textColor="@color/colorPrimaryDark"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/size_text_main_in_list_view"
+            android:textSize="12dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="@string/domaines_barons"
             android:id="@+id/text_main_in_r"
-            android:textStyle="bold" />
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:textStyle="bold"
+            android:layout_marginStart="22dp"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@+id/text_amount_wine_r"
+            android:layout_toEndOf="@+id/text_amount_wine_r" />
 
 
 
         <TextView
-            android:layout_marginLeft="34dp"
-            android:layout_marginTop="27dp"
             android:textColor="@color/colorPrimaryDark"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/size_text_main_in_list_view"
+            android:textSize="12dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="@string/text_secondary_r"
             android:id="@+id/secondary_text_in_r"
-            android:textStyle="italic" />
+            android:textStyle="italic"
+            android:layout_below="@+id/text_amount_wine_r"
+            android:layout_alignLeft="@+id/text_main_in_r"
+            android:layout_alignStart="@+id/text_main_in_r" />
 
 
     </RelativeLayout>
