--- a/app/src/main/res/layout/board_accounting.xml
+++ b/app/src/main/res/layout/board_accounting.xml
@@ -12,26 +12,25 @@
       android:layout_height="wrap_content">
 
     <TextView
-        android:paddingTop="@dimen/header_indent_top"
+        android:layout_marginTop="8.5dp"
         android:layout_marginLeft="7.5dp"
         android:textColor="@color/background_color_white"
-        android:textSize="@dimen/header_size"
-
+        style="@android:style/TextAppearance.Medium"
 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
+
         android:text="@string/get_high"
         android:id="@+id/text_view_get_wine"
-        android:textStyle="bold"
         android:layout_weight="100"/>
 
     <TextView
 
-        android:paddingTop="@dimen/header_indent_top"
+        android:layout_marginTop= "8.5dp"
         android:layout_marginLeft="7.5dp"
         android:textColor="@color/background_color_white"
-        android:textSize="@dimen/header_size"
+
+        style="@android:style/TextAppearance.Medium"
 
 
 
@@ -40,13 +39,12 @@
 
         android:text="@string/consumption"
         android:id="@+id/text_view_consumption"
-        android:textStyle="bold"
         android:layout_weight="100"/>
 
   </LinearLayout>
 
     <LinearLayout
-        android:layout_width="255dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:baselineAligned="false"
@@ -56,7 +54,7 @@
 
 
       <android.support.v7.widget.RecyclerView
-          android:layout_marginTop="23dp"
+          android:layout_marginTop="57.5dp"
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:layout_weight="100"
@@ -64,7 +62,7 @@
           />
 
       <android.support.v7.widget.RecyclerView
-          android:layout_marginTop="23dp"
+          android:layout_marginTop="57.5dp"
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:layout_weight="100"
