--- a/app/src/main/res/layout/content_sign_in.xml
+++ b/app/src/main/res/layout/content_sign_in.xml
@@ -10,11 +10,11 @@
 
     <android.support.v7.widget.CardView
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="120dp"
-        android:layout_marginBottom="120dp"
+        android:layout_marginTop="230dp"
+
         android:id="@+id/card_view_main"
-        android:layout_width="350dp"
-        android:layout_height="250dp"
+        android:layout_width="420dp"
+        android:layout_height="300dp"
         card_view:cardCornerRadius="@dimen/card_album_radius"
        >
 
@@ -30,38 +30,63 @@
             <!--Add cardview contents-->
 
             <TextView
-                android:layout_marginTop="35dp"
+                android:layout_marginTop="28dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="Винный погреб"
                 android:id="@+id/textView2"
                 android:layout_gravity="center_horizontal" />
 
             <EditText
-                android:layout_marginLeft="4dp"
-                android:layout_marginRight="4dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/editText2"
+                android:id="@+id/edit_login"
                 android:layout_gravity="center_horizontal" />
 
+
             <EditText
-                android:layout_marginLeft="4dp"
-                android:layout_marginRight="4dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
                 android:ems="10"
-                android:id="@+id/editText"
+                android:id="@+id/edit_pass"
+                android:layout_gravity="center_horizontal" />
+
+
+            <TextView
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Логин или пароль неверен"
+                android:visibility="invisible"
+                android:id="@+id/text_bad_answer"
+                android:textColor="@color/design_textinput_error_color_light"
+                android:layout_gravity="center_horizontal" />
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:indeterminateDrawable="@drawable/spinner_ring"
+                android:indeterminateOnly="true"
+                android:id="@+id/progress_bar"
+                android:visibility="invisible"
                 android:layout_gravity="center_horizontal" />
 
             <Button
+
                 android:layout_gravity="center_horizontal"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp"
+                android:paddingLeft="30dp"
+                android:paddingRight="30dp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="32dp"
                 android:text="@string/str_w"
                 android:textColor="@color/background_color_yellow_l"
                 android:background="@color/background_color_green"
