--- a/app/src/main/res/layout/frame_left.xml
+++ b/app/src/main/res/layout/frame_left.xml
@@ -2,41 +2,180 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="@color/colorPrimaryDark"
     android:orientation="vertical"
-    android:layout_width="@dimen/left_frame_width"
+    android:layout_width="130dp"
     android:layout_height="match_parent"
     android:id="@+id/linearLayout_left_frame">
 
     <RelativeLayout
 
         android:layout_width="match_parent"
-        android:layout_height="@dimen/left_element_height"
+        android:layout_height="160dp"
         android:background="@color/colorPrimary">
 
         <ImageView
-            android:layout_marginLeft="@dimen/padding_image_left_element"
-            android:layout_marginRight="@dimen/padding_image_left_element"
+
             android:id="@+id/myRectangleView"
             android:src="@mipmap/ic_dashboard"
             android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:contentDescription="@string/dashboard_img"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true" />
+
+        <TextView
+           android:layout_marginBottom="15dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:contentDescription="@string/dashboard_img" />
+
+            android:textSize="13dp"
+            android:textColor="@color/background_color_white"
+            android:text="ДАШБОРД"
+            android:id="@+id/dashboard_text"
+
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true" />
+
+
+
+
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical">
+
+        <ImageView
+            android:padding="20dp"
+            android:id="@+id/wine_img"
+            android:src="@mipmap/ic_w_wine"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:contentDescription="@string/dashboard_img"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:layout_weight="1"/>
 
         <TextView
 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
 
-            android:textSize="@dimen/header_text_left_element"
+            android:textSize="13dp"
             android:textColor="@color/background_color_white"
-            android:text="@string/dashboard"
-            android:id="@+id/textView"
-            android:layout_alignBottom="@+id/myRectangleView"
+            android:text="ВИНО"
+            android:id="@+id/wine_text"
 
-            />
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal" />
+
+        <ImageView
+            android:padding="28dp"
+            android:id="@+id/target_img"
+            android:src="@mipmap/ic_target"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:contentDescription="@string/dashboard_img"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:layout_weight="1"/>
+
+        <TextView
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:textSize="13dp"
+            android:textColor="@color/background_color_white"
+            android:text="НАВИГАЦИЯ"
+            android:id="@+id/target_text"
+
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal" />
+
+        <ImageView
+            android:padding="28dp"
+            android:id="@+id/alarm_img"
+            android:src="@mipmap/ic_bell"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:contentDescription="@string/dashboard_img"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:layout_weight="1"/>
 
 
-    </RelativeLayout>
+        <TextView
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:textSize="13dp"
+            android:textColor="@color/background_color_white"
+            android:text="НАПОМИНАНИЯ"
+            android:id="@+id/bell_text"
+
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal" />
+
+
+        <ImageView
+            android:padding="28dp"
+            android:id="@+id/graph_img"
+            android:src="@mipmap/ic_statistics"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:contentDescription="@string/dashboard_img"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:layout_weight="1"/>
+
+        <TextView
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:textSize="13dp"
+            android:textColor="@color/background_color_white"
+            android:text="СТАТИСТИКА"
+            android:id="@+id/statistic_text"
+
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal" />
+
+        <ImageView
+
+            android:padding="25dp"
+            android:id="@+id/news_img"
+            android:src="@mipmap/ic_news"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:contentDescription="@string/dashboard_img"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:layout_weight="1"/>
+        <TextView
+            android:layout_marginBottom="25dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:textSize="13dp"
+            android:textColor="@color/background_color_white"
+            android:text="НОВОСТИ"
+            android:id="@+id/news_text"
+
+
+
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal" />
+
+
+    </LinearLayout>
 
 
 </LinearLayout>
