--- a/app/src/main/res/layout/frame_top.xml
+++ b/app/src/main/res/layout/frame_top.xml
@@ -6,4 +6,42 @@
     android:layout_alignParentTop="true"
     android:layout_centerHorizontal="true"
     android:id="@+id/relativeLayout_top_frame">
+
+
+    <Button
+        android:layout_marginTop="8dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="8dp"
+        android:layout_width="235dp"
+        android:layout_height="45dp"
+        android:background="@color/background_color_green"
+        android:drawableLeft="@mipmap/ic_plus_padding"
+
+        android:text="@string/add_b"
+        android:padding="5dp"
+
+
+        android:id="@+id/button_add"
+        android:textColor="@color/background_color_white"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true">
+
+
+
+    </Button>
+
+    <TextView
+        android:layout_marginLeft="164dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="ДАШБОРД"
+        android:textColor="@color/background_color_white"
+        android:id="@+id/textView_dashboard"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+
 </RelativeLayout>
