--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -8,4 +8,6 @@
     <item name="is_bottle" type="id">1</item>
     <item name="bottle" type="id">bottle</item>
     <item name="box" type="id">box</item>
+    <item name="lost_bottle" type="id">0</item>
+    <item name="get_bottle" type="id">1</item>
 </resources>
