--- a/app/src/main/res/layout/content_sign_in.xml
+++ b/app/src/main/res/layout/content_sign_in.xml
@@ -6,12 +6,9 @@
     android:background="@drawable/wood_background"
     android:orientation="vertical">
 
-
-
     <android.support.v7.widget.CardView
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="230dp"
-
         android:id="@+id/card_view_main"
         android:layout_width="420dp"
         android:layout_height="300dp"
@@ -19,7 +16,6 @@
        >
 
         <LinearLayout
-
             android:orientation="vertical"
             android:layout_margin="3dp"
             android:id="@+id/list_container_bg"
@@ -28,7 +24,6 @@
             android:layout_height="wrap_content">
 
             <!--Add cardview contents-->
-
             <TextView
                 android:layout_marginTop="28dp"
                 android:layout_width="wrap_content"
@@ -47,7 +42,6 @@
                 android:id="@+id/edit_login"
                 android:layout_gravity="center_horizontal" />
 
-
             <EditText
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="20dp"
@@ -58,7 +52,6 @@
                 android:ems="10"
                 android:id="@+id/edit_pass"
                 android:layout_gravity="center_horizontal" />
-
 
             <TextView
                 android:layout_marginLeft="20dp"
@@ -71,6 +64,7 @@
                 android:id="@+id/text_bad_answer"
                 android:textColor="@color/design_textinput_error_color_light"
                 android:layout_gravity="center_horizontal" />
+            
             <ProgressBar
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -81,7 +75,6 @@
                 android:layout_gravity="center_horizontal" />
 
             <Button
-
                 android:layout_gravity="center_horizontal"
                 android:paddingLeft="30dp"
                 android:paddingRight="30dp"
@@ -90,20 +83,8 @@
                 android:text="@string/str_w"
                 android:textColor="@color/background_color_yellow_l"
                 android:background="@color/background_color_green"
-                android:id="@+id/button_enter"
-
-                />
-
+                android:id="@+id/button_enter"/>
 
         </LinearLayout>
-
-
-
-
     </android.support.v7.widget.CardView>
-
-
-
-
-
 </LinearLayout>
