--- a/app/src/main/res/layout/view_lost_wine.xml
+++ b/app/src/main/res/layout/view_lost_wine.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -7,7 +6,6 @@
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view_lost_w"
-
         android:layout_width="match_parent"
         android:layout_height="115dp"
         android:layout_gravity="center"
@@ -15,15 +13,11 @@
         android:elevation="3dp"
         card_view:cardCornerRadius="@dimen/card_album_radius">
 
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
     android:background="@color/background_color_white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_centerHorizontal="true"
-
-
     android:id="@+id/get_wine">
 
     <ImageView
@@ -33,9 +27,7 @@
         android:layout_height="20dp"
         android:src="@mipmap/ic_calendar"
         android:contentDescription="@string/calendar"
-
         android:id="@+id/image_calendar"/>
-
 
     <TextView
         android:layout_marginBottom="3dp"
@@ -43,12 +35,9 @@
         android:layout_height="wrap_content"
         android:textSize="12sp"
         android:text="@string/data_in_acc"
-
         android:textColor="@color/colorPrimaryDark"
-
         android:layout_alignBottom="@+id/image_calendar"
         android:layout_toRightOf="@+id/image_box_l"
-
         android:id="@+id/text_data_l_w"/>
 
     <TextView
@@ -60,13 +49,9 @@
         android:text="@string/small_text"
         android:layout_below="@+id/image_calendar"
         android:textIsSelectable="false"
-
         android:layout_alignStart="@+id/image_calendar"
         android:layout_alignLeft="@+id/image_calendar"
-
-        android:id="@+id/info_text_l_w"
-        />
-
+        android:id="@+id/info_text_l_w"/>
 
     <View
         android:layout_marginTop="36.5dp"
@@ -76,41 +61,31 @@
         android:background="@color/background_light"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="false"
-
         android:layout_alignStart="@id/image_calendar"
         android:id="@+id/colored_bar"/>
 
 
     <ImageView
-
         android:layout_marginLeft="7dp"
         android:layout_marginBottom="7dp"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:src="@mipmap/ic_box"
         android:contentDescription="@string/box_ic_in_list"
-
-
         android:layout_alignBottom="@+id/colored_bar"
         android:layout_alignLeft="@+id/colored_bar"
         android:layout_alignStart="@+id/colored_bar"
-
         android:id="@+id/image_box_l"/>
 
     <TextView
         android:layout_marginLeft="55dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
         style="@android:style/TextAppearance.Medium"
         android:text="@string/add_some"
-
-
         android:layout_alignTop="@+id/amount_lost_wine_l_w"
-
         android:textColor="@color/background_color_red"
         android:id="@+id/amount_lost_box_l_w" />
-
 
     <View
         android:layout_marginTop="36.5dp"
@@ -120,34 +95,26 @@
         android:layout_height="40dp"
         android:background="@color/background_light"
         android:layout_alignParentBottom="true"
-
-
         android:layout_toEndOf="@+id/colored_bar"
         android:id="@+id/colored_bar_next"/>
 
-
-
-
+    
     <ImageView
         android:layout_marginBottom="2.5dp"
         android:layout_width="35dp"
         android:layout_height="45dp"
         android:src="@mipmap/ic_wine_bottle"
         android:contentDescription="@string/wine_in_list"
-
-
         android:id="@+id/image_wine"
         android:layout_alignParentBottom="true"
         android:layout_alignLeft="@+id/colored_bar_next"
         android:layout_alignStart="@+id/colored_bar_next" />
 
-
+    
     <TextView
-
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style="@android:style/TextAppearance.Medium"
-
         android:text="-2"
         android:id="@+id/amount_lost_wine_l_w"
         android:textColor="@color/background_color_red"
@@ -155,10 +122,6 @@
         android:layout_toRightOf="@+id/image_wine"
         android:layout_toEndOf="@+id/image_wine" />
 
-
-
 </RelativeLayout>
-
     </android.support.v7.widget.CardView>
-
 </LinearLayout>
