--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -10,4 +10,6 @@
     <item name="box" type="id">box</item>
     <item name="lost_bottle" type="id">0</item>
     <item name="get_bottle" type="id">1</item>
+    <item name="DIALOG_VISIBLE" type="id">1</item>
+    <item name="DIALOG_INVISIBLE" type="id">0</item>
 </resources>
