--- a/app/src/main/res/layout/board_accounting.xml
+++ b/app/src/main/res/layout/board_accounting.xml
@@ -4,7 +4,7 @@
     android:layout_width="255dp"
     android:layout_weight="130"
     android:layout_height="wrap_content"
-    android:layout_marginStart="@dimen/window_indent"
+    android:layout_marginLeft="@dimen/window_indent"
     android:id="@+id/accounting_layout">
 
   <LinearLayout
