working to make ui better

--- a/app/src/main/res/drawable/bg_turnover.xml
+++ b/app/src/main/res/drawable/bg_turnover.xml
@@ -2,7 +2,6 @@
 <layer-list
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-
     <item>
         <shape
             android:shape="rectangle" >
@@ -28,7 +27,10 @@
             </bitmap>
     </item>
 
-
+    <item
+        android:top="45dp"
+        android:drawable="@drawable/draw_turnover"
+        />
 
 
 </layer-list>
