--- a/app/src/main/res/layout/board_reminder_card.xml
+++ b/app/src/main/res/layout/board_reminder_card.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content">
     
     <android.support.v7.widget.CardView
+
         android:id="@+id/card_view_lost_w"
         android:layout_width="match_parent"
         android:layout_height="70dp"
@@ -14,10 +15,11 @@
         card_view:cardCornerRadius="@dimen/card_album_radius">
         
     <RelativeLayout
+        android:background="@drawable/line_frame_reminder"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
-        android:background="@color/background_color_white">
+        android:id="@+id/reminder_rl">
 
         <TextView
             android:layout_marginTop="5dp"
